--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,14 +18,9 @@
         <activity
             android:name=".UpdateTaskActivity"
             android:exported="false" />
+
         <activity
-            android:name=".UpdateNoteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".UpdateActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AddNoteActivity"
+            android:name=".AddTaskActivity"
             android:exported="false" />
         <activity
             android:name=".SplashScreen"
